[gd_scene load_steps=10 format=3 uid="uid://fx8u7054ie0p"]

[ext_resource type="Script" path="res://Scripts/GameScene.gd" id="1_7rsgr"]
[ext_resource type="PackedScene" uid="uid://duyoaqovb7p6y" path="res://Scenes/UI/StatDisplay.tscn" id="2_4hjdr"]
[ext_resource type="PackedScene" uid="uid://bcc2s36entt5e" path="res://Scenes/UI/TeamDisplay.tscn" id="3_6alq6"]
[ext_resource type="PackedScene" uid="uid://cjmvxb0ofsdim" path="res://Scenes/Battlefield.tscn" id="3_t3gjf"]
[ext_resource type="PackedScene" uid="uid://b14md7g2o6yd8" path="res://Scenes/Minimap.tscn" id="4_nux57"]
[ext_resource type="ButtonGroup" uid="uid://b0v22ksyy78aj" path="res://Scenes/UI/BoardButtons.tres" id="5_sevyo"]
[ext_resource type="PackedScene" uid="uid://32gyan3m22qv" path="res://Scenes/UI/ButtonGrid.tscn" id="7_58o4s"]
[ext_resource type="Texture2D" uid="uid://c6a0ng6ykb56o" path="res://Content/direction_arrow.png" id="7_osf8b"]
[ext_resource type="Script" path="res://Scenes/board_view.gd" id="8_6msl2"]

[node name="GameScene" type="Node"]
script = ExtResource("1_7rsgr")

[node name="UI" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="UI/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Battlefield" parent="UI/SubViewportContainer/SubViewport" instance=ExtResource("3_t3gjf")]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2

[node name="TopBar" type="PanelContainer" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Hbox" type="HBoxContainer" parent="UI/VBoxContainer/TopBar"]
layout_mode = 2

[node name="Players" type="HBoxContainer" parent="UI/VBoxContainer/TopBar/Hbox"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Team1Display" parent="UI/VBoxContainer/TopBar/Hbox/Players" instance=ExtResource("3_6alq6")]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="UI/VBoxContainer/TopBar/Hbox/Players"]
layout_mode = 2

[node name="Team2Display" parent="UI/VBoxContainer/TopBar/Hbox/Players" instance=ExtResource("3_6alq6")]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/VBoxContainer/TopBar/Hbox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
bbcode_enabled = true
text = "[center][b][color=\"yellow\"]Forward March[/color][/b] [color=\"green]By Roy Awesome[/color][/center]"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/TopBar/Hbox"]
layout_mode = 2
size_flags_horizontal = 10

[node name="StatDisplay" parent="UI/VBoxContainer/TopBar/Hbox/HBoxContainer" instance=ExtResource("2_4hjdr")]
layout_mode = 2

[node name="StatDisplay2" parent="UI/VBoxContainer/TopBar/Hbox/HBoxContainer" instance=ExtResource("2_4hjdr")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="BoardPanelButton" type="Button" parent="UI/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(266, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 2.0
toggle_mode = true
text = "Board Control"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -132.0
offset_right = 231.0
offset_bottom = -4.0
grow_vertical = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(227, 128)
render_target_update_mode = 4

[node name="Minimap" parent="SubViewportContainer/SubViewport" instance=ExtResource("4_nux57")]

[node name="BoardPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -398.0
offset_top = -256.0
offset_right = 398.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="BoardPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoardPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="BoardPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BoardButton" type="Button" parent="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer6"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_sevyo")
text = "Board
"

[node name="MarginContainer" type="MarginContainer" parent="BoardPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BaseButton" type="Button" parent="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_sevyo")
text = "Base"

[node name="MarginContainer2" type="MarginContainer" parent="BoardPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UnitsButton" type="Button" parent="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_sevyo")
text = "Units"

[node name="MarginContainer3" type="MarginContainer" parent="BoardPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UpgradeButton" type="Button" parent="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_sevyo")
text = "Upgrade"

[node name="MarginContainer4" type="MarginContainer" parent="BoardPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemButton" type="Button" parent="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_sevyo")
text = "Item"

[node name="MarginContainer5" type="MarginContainer" parent="BoardPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ViewButton" type="Button" parent="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer5"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("5_sevyo")
text = "View
"

[node name="Container" type="Control" parent="BoardPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="BoardPanel/HBoxContainer/Container"]
layout_mode = 2
offset_right = 642.0
offset_bottom = 448.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="BoardPanel/HBoxContainer/Container/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="MarchLeftIndicator" type="VBoxContainer" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer2/MarchLeftIndicator"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("7_osf8b")

[node name="TextureRect2" type="TextureRect" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer2/MarchLeftIndicator"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("7_osf8b")

[node name="TextureRect3" type="TextureRect" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer2/MarchLeftIndicator"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("7_osf8b")

[node name="MarginContainer" type="MarginContainer" parent="BoardPanel/HBoxContainer/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BoardView" type="TextureRect" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 2
script = ExtResource("8_6msl2")

[node name="MarginContainer3" type="MarginContainer" parent="BoardPanel/HBoxContainer/Container/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="MarchRightIndicator" type="VBoxContainer" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer3/MarchRightIndicator"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("7_osf8b")
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer3/MarchRightIndicator"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("7_osf8b")
flip_h = true

[node name="TextureRect4" type="TextureRect" parent="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer3/MarchRightIndicator"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("7_osf8b")
flip_h = true

[node name="ButtonGrid" parent="BoardPanel" instance=ExtResource("7_58o4s")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="WaveTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 10.0

[node name="Boards" type="Node2D" parent="."]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[connection signal="toggled" from="UI/VBoxContainer/MarginContainer/HBoxContainer/BoardPanelButton" to="." method="_on_board_panel_button_toggled"]
[connection signal="toggled" from="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer6/BoardButton" to="." method="_on_board_button_toggled" binds= [0]]
[connection signal="toggled" from="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer/BaseButton" to="." method="_on_board_button_toggled" binds= [1]]
[connection signal="toggled" from="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer2/UnitsButton" to="." method="_on_board_button_toggled" binds= [2]]
[connection signal="toggled" from="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer3/UpgradeButton" to="." method="_on_board_button_toggled" binds= [3]]
[connection signal="toggled" from="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer4/ItemButton" to="." method="_on_board_button_toggled" binds= [4]]
[connection signal="toggled" from="BoardPanel/HBoxContainer/VBoxContainer/MarginContainer5/ViewButton" to="." method="_on_board_button_toggled" binds= [5]]
[connection signal="gui_input" from="BoardPanel/HBoxContainer/Container/HBoxContainer/MarginContainer/BoardView" to="." method="_on_board_view_gui_input"]
[connection signal="ability_wants_run" from="BoardPanel/ButtonGrid" to="." method="_on_button_grid_ability_wants_run"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
